# benchmarks

./: README.md  pyproject.toml
.github/workflows/: build-commit0-images.yml  build-gaia-image.yml  build-swt-bench-images.yml
benchmarks/commit0/: build_images.py  eval_infer.py  run_infer.py
benchmarks/commit0/tests/: test_eval_infer.py
benchmarks/gaia/: build_images.py  eval_infer.py  run_infer.py
benchmarks/multiswebench/: README.md  build_images.py  eval_infer.py  run_infer.py
benchmarks/openagentsafety/: build_images.py  run_infer.py
benchmarks/swebench/: README.md  build_images.py  eval_infer.py  run_infer.py
benchmarks/swebenchmultimodal/: README.md  build_images.py  eval_infer.py  run_infer.py
benchmarks/swebenchmultimodal/prompts/: default.j2
benchmarks/swtbench/: build_images.py  eval_infer.py  run_infer.py
benchmarks/utils/: build_utils.py  dataset.py  evaluation.py  laminar.py  models.py
tests/: test_iterative_resume.py  test_keyboard_interrupt.py  test_metrics.py  test_workspace_cleanup.py
